fixing horizontal scroll again

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,4 @@
-/* Coolors Exported Palette - https://coolors.co/000000-306b34-9792e3-cfcfea-44ff00 */
-/* SCSS HEX */
-/* SCSS HSL */
-/* SCSS RGB */
+
 * {
   border: 1px solid red !important;
   margin: 0;
@@ -43,7 +40,6 @@
 
 .nav {
   display: flex;
-  flex-grow: 0.8;
   flex-wrap: wrap;
   list-style-type: none;
   
